# Password-Manager

./: .gitignore  CMakeLists.txt  README.md
include/: application.hpp  database.hpp  file.hpp  ncurses.hpp  state.hpp  utils.hpp
src/: application.cpp  database.cpp  file.cpp  main.cpp  state.cpp
